crates/bevy_ecs/compile_fail/tests/ui/component_hook_call_signature_mismatch.stderr
error[E0057]: this function takes 1 argument but 2 arguments were supplied
  --> tests/ui/component_hook_call_signature_mismatch.rs:8:14
   |
 5 | #[derive(Component)]
   |          --------- unexpected argument #2 of type `HookContext`
...
 8 |     on_add = wrong_bazzing("foo"),
   |              ^^^^^^^^^^^^^^^^^^^^
   |
note: opaque type defined here
  --> tests/ui/component_hook_call_signature_mismatch.rs:12:34
   |
12 | fn wrong_bazzing(_path: &str) -> impl Fn(bevy_ecs::world::DeferredWorld) {
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0057`.
